# cv-frames

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cvframes/: cli.py  iterate.py
cvframes/web/: client.py  server.py
tests/: test_iterate.py
